fix profile info position

--- a/index.html
+++ b/index.html
@@ -15,10 +15,31 @@
                     alt="logo saying around the us"
                 />
             </header>
-            <div class="">
-                <h1>Jacques Cousteau</h1>
-                <p>Explorer</p>
-            </div>
+            <main class="content">
+                <section class="profile">
+                    <img
+                        src="./images/jacques-cousteau.png"
+                        alt="Avatar"
+                        class="profile__image"
+                    />
+                    <div class="profile__info">
+                        <h1 class="profile__title">Jacques Cousteau</h1>
+                        <img
+                            src="./images/Edit Button.svg"
+                            alt="small edit icon"
+                            class="profile__edit-button"
+                        />
+                        <p class="profile__description">Explorer</p>
+                    </div>
+                    <div>
+                        <img
+                            src="./images/Add Button.svg"
+                            alt="add button icon"
+                            class="profile__add-button"
+                        />
+                    </div>
+                </section>
+            </main>
         </div>
     </body>
 </html>
