--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 />
             </header>
             <main class="content">
-                <section class="profile">
+                <section class="profile page__section">
                     <img
                         src="./images/jacques-cousteau.png"
                         alt="Avatar"
@@ -26,19 +26,107 @@
                         <h1 class="profile__title">Jacques Cousteau</h1>
                         <img
                             src="./images/Edit Button.svg"
-                            alt="small edit icon"
+                            alt="edit button icon"
                             class="profile__edit-button"
                         />
                         <p class="profile__description">Explorer</p>
                     </div>
-                    <div>
+                    <div class="profile__add-button">
                         <img
                             src="./images/Add Button.svg"
                             alt="add button icon"
-                            class="profile__add-button"
                         />
                     </div>
                 </section>
+                <section class="cards page__section">
+                    <ul class="card__list">
+                        <li class="card">
+                            <img
+                                src="./images/yosemite.jpg"
+                                alt="image of yosemite valley"
+                                class="card__image" />
+                        <div class="card__description">
+                            <h2 class="card__title">Yosemite Valley</h2>
+                            <img
+                                src="./images/Group.svg"
+                                alt="heart-shaped like button"
+                                class="card__like-button"
+                            />
+                        </div>
+                    </li>
+                        <li class="card">
+                            <img
+                            src="./images/lake-louise.jpg"
+                            alt="image of lake louise"
+                            class="card__image"
+                        />
+                        <div class="card__description">
+                            <h2 class="card__title">Lake Louise</h2>
+                            <img
+                                src="./images/Group.svg"
+                                alt="heart-shaped like button"
+                                class="card__like-button"
+                            />
+                    </li>
+                        <li class="card">
+                            <img
+                            src="./images/bald-mountains.jpg"
+                            alt="image of bald-mountains"
+                            class="card__image"
+                        />
+                        <div class="card__description">
+                            <h2 class="card__title">Bald Mountains</h2>
+                            <img
+                                src="./images/Group.svg"
+                                alt="heart-shaped like button"
+                                class="card__like-button"
+                            />
+                    </li>
+                        <li class="card">
+                            <img
+                            src="./images/latemar.jpg"
+                            alt="image of latemar"
+                            class="card__image"
+                        />
+                        <div class="card__description">
+                            <h2 class="card__title">Latemar</h2>
+                            <img
+                                src="./images/Group.svg"
+                                alt="heart-shaped like button"
+                                class="card__like-button"/>
+                    </li>
+                        <li class="card">
+                            <img
+                            src="./images/vanoise.jpg"
+                            alt="image of
+                        vanoise"
+                            class="card__image"/>
+                        <div class="card__description">
+                            <h2 class="card__title">Vanoise National Park</h2>
+                            <img
+                                src="./images/Group.svg"
+                                alt="heart-shaped like button"
+                                class="card__like-button"/>
+                    </li>
+                        <li class="card">
+                            <img
+                            src="./images/lago.jpg"
+                            alt="image of lago di Braies"
+                            class="card__image"
+                        />
+                        <div class="card__description">
+                            <h2 class="card__title">Lago di Braies</h2>
+                            <img
+                                src="./images/Group.svg"
+                                alt="heart-shaped like button"
+                                class="card__like-button"
+                            />
+                    </li>
+                    </ul>
+                </section>
+                <footer class="footer">
+                    <p class="footer__copyright">&copy; 2024 Around the U.S.</p> 
+                </footer>
             </main>
         </div>
     </body>
