fix profile and buttons

--- a/index.html
+++ b/index.html
@@ -24,18 +24,11 @@
                     />
                     <div class="profile__info">
                         <h1 class="profile__title">Jacques Cousteau</h1>
-                        <img
-                            src="./images/Edit Button.svg"
-                            alt="edit button icon"
-                            class="profile__edit-button"
-                        />
+                        <button class="profile__edit-button"></button>
                         <p class="profile__description">Explorer</p>
                     </div>
                     <div class="profile__add-button">
-                        <img
-                            src="./images/Add Button.svg"
-                            alt="add button icon"
-                        />
+                        <button class="profile__add-button"></button>
                     </div>
                 </section>
                 <section class="cards page__section">
