input media quiery

--- a/index.html
+++ b/index.html
@@ -40,11 +40,7 @@
                                 class="card__image" />
                         <div class="card__description">
                             <h2 class="card__title">Yosemite Valley</h2>
-                            <img
-                                src="./images/Group.svg"
-                                alt="heart-shaped like button"
-                                class="card__like-button"
-                            />
+                            <button class="card__like-button"></button>
                         </div>
                     </li>
                         <li class="card">
@@ -55,11 +51,7 @@
                         />
                         <div class="card__description">
                             <h2 class="card__title">Lake Louise</h2>
-                            <img
-                                src="./images/Group.svg"
-                                alt="heart-shaped like button"
-                                class="card__like-button"
-                            />
+                            <button class="card__like-button"></button>
                     </li>
                         <li class="card">
                             <img
@@ -69,11 +61,7 @@
                         />
                         <div class="card__description">
                             <h2 class="card__title">Bald Mountains</h2>
-                            <img
-                                src="./images/Group.svg"
-                                alt="heart-shaped like button"
-                                class="card__like-button"
-                            />
+                            <button class="card__like-button"></button>
                     </li>
                         <li class="card">
                             <img
@@ -83,10 +71,7 @@
                         />
                         <div class="card__description">
                             <h2 class="card__title">Latemar</h2>
-                            <img
-                                src="./images/Group.svg"
-                                alt="heart-shaped like button"
-                                class="card__like-button"/>
+                            <button class="card__like-button"></button>
                     </li>
                         <li class="card">
                             <img
@@ -96,10 +81,7 @@
                             class="card__image"/>
                         <div class="card__description">
                             <h2 class="card__title">Vanoise National Park</h2>
-                            <img
-                                src="./images/Group.svg"
-                                alt="heart-shaped like button"
-                                class="card__like-button"/>
+                            <button class="card__like-button"></button>
                     </li>
                         <li class="card">
                             <img
@@ -109,11 +91,7 @@
                         />
                         <div class="card__description">
                             <h2 class="card__title">Lago di Braies</h2>
-                            <img
-                                src="./images/Group.svg"
-                                alt="heart-shaped like button"
-                                class="card__like-button"
-                            />
+                            <button class="card__like-button"></button>
                     </li>
                     </ul>
                 </section>
