--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
                     />
                     <div class="profile__info">
                         <h1 class="profile__title">Jacques Cousteau</h1>
-                        <button class="profile__edit-button"></button>
+                        <button class="profile__edit-button" type="button"></button>
                         <p class="profile__description">Explorer</p>
                     </div>
                     <div class="profile__add-button">
-                        <button class="profile__add-button"></button>
+                        <button class="profile__add-button" type="button"></button>
                     </div>
                 </section>
                 <section class="cards page__section">
@@ -40,7 +40,7 @@
                                 class="card__image" />
                         <div class="card__description">
                             <h2 class="card__title">Yosemite Valley</h2>
-                            <button class="card__like-button"></button>
+                            <button class="card__like-button" type="button"></button>
                         </div>
                     </li>
                         <li class="card">
