--- a/index.html
+++ b/index.html
@@ -27,12 +27,10 @@
                         <button class="profile__edit-button" type="button"></button>
                         <p class="profile__description">Explorer</p>
                     </div>
-                    <div class="profile__add-button">
                         <button class="profile__add-button" type="button"></button>
-                    </div>
                 </section>
                 <section class="cards page__section">
-                    <ul class="card__list">
+                    <ul class="cards__list">
                         <li class="card">
                             <img
                                 src="./images/yosemite.jpg"
@@ -42,7 +40,7 @@
                             <h2 class="card__title">Yosemite Valley</h2>
                             <button class="card__like-button" type="button"></button>
                         </div>
-                    </li>
+                        </li>
                         <li class="card">
                             <img
                             src="./images/lake-louise.jpg"
@@ -52,7 +50,7 @@
                         <div class="card__description">
                             <h2 class="card__title">Lake Louise</h2>
                             <button class="card__like-button"></button>
-                    </li>
+                        </li>
                         <li class="card">
                             <img
                             src="./images/bald-mountains.jpg"
@@ -62,7 +60,7 @@
                         <div class="card__description">
                             <h2 class="card__title">Bald Mountains</h2>
                             <button class="card__like-button"></button>
-                    </li>
+                        </li>
                         <li class="card">
                             <img
                             src="./images/latemar.jpg"
@@ -72,7 +70,7 @@
                         <div class="card__description">
                             <h2 class="card__title">Latemar</h2>
                             <button class="card__like-button"></button>
-                    </li>
+                        </li>
                         <li class="card">
                             <img
                             src="./images/vanoise.jpg"
@@ -82,7 +80,7 @@
                         <div class="card__description">
                             <h2 class="card__title">Vanoise National Park</h2>
                             <button class="card__like-button"></button>
-                    </li>
+                        </li>
                         <li class="card">
                             <img
                             src="./images/lago.jpg"
@@ -92,7 +90,7 @@
                         <div class="card__description">
                             <h2 class="card__title">Lago di Braies</h2>
                             <button class="card__like-button"></button>
-                    </li>
+                        </li>
                     </ul>
                 </section>
             </main>
