--- a/index.html
+++ b/index.html
@@ -36,60 +36,56 @@
                                 src="./images/yosemite.jpg"
                                 alt="image of yosemite valley"
                                 class="card__image" />
-                        <div class="card__description">
+                            <div class="card__description">
                             <h2 class="card__title">Yosemite Valley</h2>
                             <button class="card__like-button" type="button"></button>
-                        </div>
+                            </div>
                         </li>
                         <li class="card">
                             <img
                             src="./images/lake-louise.jpg"
                             alt="image of lake louise"
-                            class="card__image"
-                        />
-                        <div class="card__description">
+                            class="card__image" />
+                            <div class="card__description">
                             <h2 class="card__title">Lake Louise</h2>
-                            <button class="card__like-button"></button>
+                            <button class="card__like-button" type="button"></button>
                         </li>
                         <li class="card">
                             <img
                             src="./images/bald-mountains.jpg"
                             alt="image of bald-mountains"
-                            class="card__image"
-                        />
-                        <div class="card__description">
+                            class="card__image"/>
+
+                            <div class="card__description">
                             <h2 class="card__title">Bald Mountains</h2>
-                            <button class="card__like-button"></button>
+                            <button class="card__like-button" type="button"></button>
                         </li>
                         <li class="card">
                             <img
                             src="./images/latemar.jpg"
                             alt="image of latemar"
-                            class="card__image"
-                        />
-                        <div class="card__description">
+                            class="card__image"/>
+                            <div class="card__description">
                             <h2 class="card__title">Latemar</h2>
-                            <button class="card__like-button"></button>
+                            <button class="card__like-button" type="button"></button>
                         </li>
                         <li class="card">
                             <img
                             src="./images/vanoise.jpg"
-                            alt="image of
-                        vanoise"
+                            alt="image of vanoise"
                             class="card__image"/>
-                        <div class="card__description">
+                            <div class="card__description">
                             <h2 class="card__title">Vanoise National Park</h2>
-                            <button class="card__like-button"></button>
+                            <button class="card__like-button" type="button"></button>
                         </li>
                         <li class="card">
                             <img
                             src="./images/lago.jpg"
                             alt="image of lago di Braies"
-                            class="card__image"
-                        />
-                        <div class="card__description">
+                            class="card__image"/>
+                            <div class="card__description">
                             <h2 class="card__title">Lago di Braies</h2>
-                            <button class="card__like-button"></button>
+                            <button class="card__like-button" type="button"></button>
                         </li>
                     </ul>
                 </section>
