--- a/index.html
+++ b/index.html
@@ -24,10 +24,13 @@
                     />
                     <div class="profile__info">
                         <h1 class="profile__title">Jacques Cousteau</h1>
-                        <button class="profile__edit-button" type="button"></button>
+                        <button
+                            class="profile__edit-button"
+                            type="button"
+                        ></button>
                         <p class="profile__description">Explorer</p>
                     </div>
-                        <button class="profile__add-button" type="button"></button>
+                    <button class="profile__add-button" type="button"></button>
                 </section>
                 <section class="cards page__section">
                     <ul class="cards__list">
@@ -35,64 +38,94 @@
                             <img
                                 src="./images/yosemite.jpg"
                                 alt="image of yosemite valley"
-                                class="card__image" />
+                                class="card__image"
+                            />
                             <div class="card__description">
-                            <h2 class="card__title">Yosemite Valley</h2>
-                            <button class="card__like-button" type="button"></button>
+                                <h2 class="card__title">Yosemite Valley</h2>
+                                <button
+                                    class="card__like-button"
+                                    type="button"
+                                ></button>
                             </div>
                         </li>
                         <li class="card">
                             <img
-                            src="./images/lake-louise.jpg"
-                            alt="image of lake louise"
-                            class="card__image" />
+                                src="./images/lake-louise.jpg"
+                                alt="image of lake louise"
+                                class="card__image"
+                            />
                             <div class="card__description">
-                            <h2 class="card__title">Lake Louise</h2>
-                            <button class="card__like-button" type="button"></button>
+                                <h2 class="card__title">Lake Louise</h2>
+                                <button
+                                    class="card__like-button"
+                                    type="button"
+                                ></button>
+                            </div>
                         </li>
                         <li class="card">
                             <img
-                            src="./images/bald-mountains.jpg"
-                            alt="image of bald-mountains"
-                            class="card__image"/>
-
+                                src="./images/bald-mountains.jpg"
+                                alt="image of bald-mountains"
+                                class="card__image"
+                            />
                             <div class="card__description">
-                            <h2 class="card__title">Bald Mountains</h2>
-                            <button class="card__like-button" type="button"></button>
+                                <h2 class="card__title">Bald Mountains</h2>
+                                <button
+                                    class="card__like-button"
+                                    type="button"
+                                ></button>
+                            </div>
                         </li>
                         <li class="card">
                             <img
-                            src="./images/latemar.jpg"
-                            alt="image of latemar"
-                            class="card__image"/>
+                                src="./images/latemar.jpg"
+                                alt="image of latemar"
+                                class="card__image"
+                            />
                             <div class="card__description">
-                            <h2 class="card__title">Latemar</h2>
-                            <button class="card__like-button" type="button"></button>
+                                <h2 class="card__title">Latemar</h2>
+                                <button
+                                    class="card__like-button"
+                                    type="button"
+                                ></button>
+                            </div>
                         </li>
                         <li class="card">
                             <img
-                            src="./images/vanoise.jpg"
-                            alt="image of vanoise"
-                            class="card__image"/>
+                                src="./images/vanoise.jpg"
+                                alt="image of vanoise"
+                                class="card__image"
+                            />
                             <div class="card__description">
-                            <h2 class="card__title">Vanoise National Park</h2>
-                            <button class="card__like-button" type="button"></button>
+                                <h2 class="card__title">
+                                    Vanoise National Park
+                                </h2>
+                                <button
+                                    class="card__like-button"
+                                    type="button"
+                                ></button>
+                            </div>
                         </li>
                         <li class="card">
                             <img
-                            src="./images/lago.jpg"
-                            alt="image of lago di Braies"
-                            class="card__image"/>
+                                src="./images/lago.jpg"
+                                alt="image of lago di Braies"
+                                class="card__image"
+                            />
                             <div class="card__description">
-                            <h2 class="card__title">Lago di Braies</h2>
-                            <button class="card__like-button" type="button"></button>
+                                <h2 class="card__title">Lago di Braies</h2>
+                                <button
+                                    class="card__like-button"
+                                    type="button"
+                                ></button>
+                            </div>
                         </li>
                     </ul>
                 </section>
             </main>
         </div>
         <footer class="footer">
-            <p class="footer__copyright">&copy; 2024 Around the U.S.</p> 
+            <p class="footer__copyright">&copy; 2024 Around the U.S.</p>
         </footer>
     </body>
 </html>
