--- a/index.html
+++ b/index.html
@@ -128,5 +128,16 @@
             <p class="footer__copyright">&copy; 2024 Around the U.S.</p>
         </footer>
         <script src="./scripts/index.js"></script>
+        <div class="modal">
+            <div class="modal__container">
+                <button class="modal__close"></button>
+                <p class="modal__heading">Edit Profile</p>
+                <form class="modal__form">
+                    <input type="text" name="title" />
+                    <input type="text" name="description" />
+                    <button class="modal__button">Save</button>
+                </form>
+            </div>
+        </div>
     </body>
 </html>
