--- a/index.html
+++ b/index.html
@@ -133,11 +133,17 @@
                 <button class="modal__close"></button>
                 <p class="modal__heading">Edit Profile</p>
                 <form class="modal__form">
-                    <input class="modal__imput" type="text" name="title" />
                     <input
-                        class="modal__imput"
+                        class="modal__input"
+                        type="text"
+                        name="title"
+                        placeholder="Jacques Cousteau"
+                    />
+                    <input
+                        class="modal__input"
                         type="text"
                         name="description"
+                        placeholder="Explorer"
                     />
                     <button class="modal__button">Save</button>
                 </form>
