--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                         <h1 class="profile__title">Jacques Cousteau</h1>
                         <button
                             class="profile__edit-button"
+                            id="profile-edit-button"
                             type="button"
                         ></button>
                         <p class="profile__description">Explorer</p>
@@ -127,10 +128,9 @@
         <footer class="footer">
             <p class="footer__copyright">&copy; 2024 Around the U.S.</p>
         </footer>
-        <script src="./scripts/index.js"></script>
-        <div class="modal">
+        <div class="modal" id="profile-edit-modal">
             <div class="modal__container">
-                <button class="modal__close"></button>
+                <button class="modal__close" id="modal-close-button"></button>
                 <p class="modal__heading">Edit Profile</p>
                 <form class="modal__form">
                     <input
@@ -149,5 +149,6 @@
                 </form>
             </div>
         </div>
+        <script src="./scripts/index.js"></script>
     </body>
 </html>
