--- a/index.html
+++ b/index.html
@@ -34,94 +34,7 @@
                     <button class="profile__add-button" type="button"></button>
                 </section>
                 <section class="cards page__section">
-                    <ul class="cards__list">
-                        <li class="card">
-                            <img
-                                src="./images/yosemite.jpg"
-                                alt="image of yosemite valley"
-                                class="card__image"
-                            />
-                            <div class="card__description">
-                                <h2 class="card__title">Yosemite Valley</h2>
-                                <button
-                                    class="card__like-button"
-                                    type="button"
-                                ></button>
-                            </div>
-                        </li>
-                        <li class="card">
-                            <img
-                                src="./images/lake-louise.jpg"
-                                alt="image of lake louise"
-                                class="card__image"
-                            />
-                            <div class="card__description">
-                                <h2 class="card__title">Lake Louise</h2>
-                                <button
-                                    class="card__like-button"
-                                    type="button"
-                                ></button>
-                            </div>
-                        </li>
-                        <li class="card">
-                            <img
-                                src="./images/bald-mountains.jpg"
-                                alt="image of bald-mountains"
-                                class="card__image"
-                            />
-                            <div class="card__description">
-                                <h2 class="card__title">Bald Mountains</h2>
-                                <button
-                                    class="card__like-button"
-                                    type="button"
-                                ></button>
-                            </div>
-                        </li>
-                        <li class="card">
-                            <img
-                                src="./images/latemar.jpg"
-                                alt="image of latemar"
-                                class="card__image"
-                            />
-                            <div class="card__description">
-                                <h2 class="card__title">Latemar</h2>
-                                <button
-                                    class="card__like-button"
-                                    type="button"
-                                ></button>
-                            </div>
-                        </li>
-                        <li class="card">
-                            <img
-                                src="./images/vanoise.jpg"
-                                alt="image of vanoise"
-                                class="card__image"
-                            />
-                            <div class="card__description">
-                                <h2 class="card__title">
-                                    Vanoise National Park
-                                </h2>
-                                <button
-                                    class="card__like-button"
-                                    type="button"
-                                ></button>
-                            </div>
-                        </li>
-                        <li class="card">
-                            <img
-                                src="./images/lago.jpg"
-                                alt="image of lago di Braies"
-                                class="card__image"
-                            />
-                            <div class="card__description">
-                                <h2 class="card__title">Lago di Braies</h2>
-                                <button
-                                    class="card__like-button"
-                                    type="button"
-                                ></button>
-                            </div>
-                        </li>
-                    </ul>
+                    <ul class="cards__list"></ul>
                 </section>
             </main>
         </div>
@@ -137,18 +50,28 @@
                         class="modal__input"
                         type="text"
                         name="title"
+                        id="profile-title-input"
                         placeholder="Jacques Cousteau"
                     />
                     <input
                         class="modal__input"
                         type="text"
                         name="description"
+                        id="profile-description-input"
                         placeholder="Explorer"
                     />
                     <button class="modal__button">Save</button>
                 </form>
             </div>
         </div>
+        <template id="card-template"
+            ><li class="card">
+                <img src="" alt="" class="card__image" />
+                <div class="card__description">
+                    <h2 class="card__title"></h2>
+                    <button class="card__like-button" type="button"></button>
+                </div></li
+        ></template>
         <script src="./scripts/index.js"></script>
     </body>
 </html>
