--- a/index.html
+++ b/index.html
@@ -43,22 +43,26 @@
         </footer>
         <div class="modal" id="profile-edit-modal">
             <div class="modal__container">
-                <button class="modal__close" id="modal-close-button"></button>
-                <p class="modal__heading">Edit Profile</p>
+                <button
+                    class="modal__close"
+                    id="modal-close-button"
+                    type="button"
+                ></button>
+                <h2 class="modal__heading">Edit Profile</h2>
                 <form class="modal__form">
                     <input
                         class="modal__input"
                         type="text"
                         name="title"
                         id="profile-title-input"
-                        placeholder="Jacques Cousteau"
+                        placeholder="Your Name"
                     />
                     <input
                         class="modal__input"
                         type="text"
                         name="description"
                         id="profile-description-input"
-                        placeholder="Explorer"
+                        placeholder="About you"
                     />
                     <button class="modal__button">Save</button>
                 </form>
@@ -68,7 +72,7 @@
             ><li class="card">
                 <img src="" alt="" class="card__image" />
                 <div class="card__description">
-                    <h2 class="card__title"></h2>
+                    <h3 class="card__title"></h3>
                     <button class="card__like-button" type="button"></button>
                 </div></li
         ></template>
