--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <footer class="footer">
             <p class="footer__copyright">&copy; 2024 Around the U.S.</p>
         </footer>
-        <div class="modal" id="profile-edit-modal">
+        <div class="modal modal_opened" id="profile-edit-modal">
             <div class="modal__container">
                 <button
                     class="modal__close"
@@ -62,7 +62,7 @@
                         type="text"
                         name="description"
                         id="profile-description-input"
-                        placeholder="About you"
+                        placeholder="About You"
                     />
                     <button class="modal__button">Save</button>
                 </form>
