--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <footer class="footer">
             <p class="footer__copyright">&copy; 2024 Around the U.S.</p>
         </footer>
-        <div class="modal modal_opened" id="profile-edit-modal">
+        <div class="modal" id="profile-edit-modal">
             <div class="modal__container">
                 <button
                     class="modal__close"
