Delete card functionality

--- a/index.html
+++ b/index.html
@@ -101,6 +101,11 @@
         </div>
         <template id="card-template"
             ><li class="card">
+                <button
+                    class="cards__delete-button"
+                    id="cards-delete-button"
+                    type="button"
+                ></button>
                 <img src="" alt="" class="card__image" />
                 <div class="card__description">
                     <h2 class="card__title"></h2>
