add card image modal

--- a/index.html
+++ b/index.html
@@ -99,6 +99,19 @@
                 </form>
             </div>
         </div>
+
+        //*card image modal*//
+        <div class="image__modal" id="card-image-modal">
+            <div class="image__modal-container">
+                <img src="" alt="" />
+                <button
+                    class="image__modal-close"
+                    id="image-modal-close-button"
+                    type="button"
+                ></button>
+            </div>
+        </div>
+
         <template id="card-template"
             ><li class="card">
                 <button
