finish image modal

--- a/index.html
+++ b/index.html
@@ -101,11 +101,12 @@
         </div>
 
         //*card image modal*//
-        <div class="image__modal" id="card-image-modal">
-            <div class="image__modal-container">
-                <img src="" alt="" />
+        <div class="modal" id="card-image-modal">
+            <div class="modal__container modal__container_type_preview">
+                <img class="modal__image" />
+                <p class="modal__description"></p>
                 <button
-                    class="image__modal-close"
+                    class="modal__close"
                     id="image-modal-close-button"
                     type="button"
                 ></button>
