--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         //*card image modal*//
         <div class="modal" id="card-image-modal">
             <div class="modal__container modal__container_type_preview">
-                <img class="modal__image" />
+                <img class="modal__image" src=" " alt=" " />
                 <p class="modal__description"></p>
                 <button
                     class="modal__close"
