fix error message positioning

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     ></span>
                     <input
                         class="modal__input modal__input_type_url"
-                        type="text"
+                        type="url"
                         name="url"
                         id="image-description-input"
                         placeholder="Image URL"
