--- a/index.html
+++ b/index.html
@@ -52,20 +52,22 @@
                 ></button>
                 <h2 class="modal__heading">Edit Profile</h2>
                 <form class="modal__form">
-                    <input
-                        class="modal__input"
-                        type="text"
-                        name="title"
-                        id="profile-title-input"
-                        placeholder="Your Name"
-                        minlength="2"
-                        maxlength="40"
-                        required
-                    />
-                    <span
-                        class="modal__error"
-                        id="profile-title-input-error"
-                    ></span>
+                    <label class="modal__label">
+                        <input
+                            class="modal__input"
+                            type="text"
+                            name="title"
+                            id="profile-title-input"
+                            placeholder="Your Name"
+                            minlength="2"
+                            maxlength="40"
+                            required
+                        />
+                        <span
+                            class="modal__error"
+                            id="profile-title-input-error"
+                        ></span>
+                    </label>
                     <input
                         class="modal__input"
                         type="text"
