--- a/index.html
+++ b/index.html
@@ -68,20 +68,22 @@
                             id="profile-title-input-error"
                         ></span>
                     </label>
-                    <input
-                        class="modal__input"
-                        type="text"
-                        name="description"
-                        id="profile-description-input"
-                        placeholder="About You"
-                        minlength="2"
-                        maxlength="200"
-                        required
-                    />
-                    <span
-                        class="modal__error"
-                        id="profile-description-input-error"
-                    ></span>
+                    <label class=".modal__label">
+                        <input
+                            class="modal__input"
+                            type="text"
+                            name="description"
+                            id="profile-description-input"
+                            placeholder="About You"
+                            minlength="2"
+                            maxlength="200"
+                            required
+                        />
+                        <span
+                            class="modal__error"
+                            id="profile-description-input-error"
+                        ></span>
+                    </label>
                     <button class="modal__button modal__button_disabled">
                         Save
                     </button>
