--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                             id="profile-title-input-error"
                         ></span>
                     </label>
-                    <label class=".modal__label">
+                    <label class="modal__label">
                         <input
                             class="modal__input"
                             type="text"
@@ -101,32 +101,36 @@
                 ></button>
                 <h2 class="modal__heading">New Place</h2>
                 <form class="modal__form">
-                    <input
-                        class="modal__input modal__input_type_title"
-                        type="text"
-                        name="title"
-                        id="image-title-input"
-                        placeholder="Title"
-                        minlength="1"
-                        maxlength="30"
-                        required
-                    />
-                    <span
-                        class="modal__error"
-                        id="image-title-input-error"
-                    ></span>
-                    <input
-                        class="modal__input modal__input_type_url"
-                        type="url"
-                        name="url"
-                        id="image-description-input"
-                        placeholder="Image URL"
-                        required
-                    />
-                    <span
-                        class="modal__error"
-                        id="image-description-input-error"
-                    ></span>
+                    <label class="modal__label">
+                        <input
+                            class="modal__input modal__input_type_title"
+                            type="text"
+                            name="title"
+                            id="image-title-input"
+                            placeholder="Title"
+                            minlength="1"
+                            maxlength="30"
+                            required
+                        />
+                        <span
+                            class="modal__error"
+                            id="image-title-input-error"
+                        ></span>
+                    </label>
+                    <label class="modal__label">
+                        <input
+                            class="modal__input modal__input_type_url"
+                            type="url"
+                            name="url"
+                            id="image-description-input"
+                            placeholder="Image URL"
+                            required
+                        />
+                        <span
+                            class="modal__error"
+                            id="image-description-input-error"
+                        ></span>
+                    </label>
                     <button class="modal__button">Save</button>
                 </form>
             </div>
