--- a/index.html
+++ b/index.html
@@ -162,7 +162,6 @@
                     <button class="card__like-button" type="button"></button>
                 </div></li
         ></template>
-        <script src="./scripts/index.js"></script>
-        <script src="./scripts/validation.js"></script>
+        <script src="./pages/index.js" type="module"></script>
     </body>
 </html>
