--- a/src/index.html
+++ b/src/index.html
@@ -4,21 +4,20 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Around The U.S.</title>
-        <link rel="stylesheet" href="./pages/index.css" />
     </head>
     <body class="page">
         <div class="page__content">
             <header class="header">
                 <img
                     class="header__image"
-                    src="./images/Vector.svg"
+                    src="<%=require('./images/Vector.svg')%>"
                     alt="logo saying around the us"
                 />
             </header>
             <main class="content">
                 <section class="profile page__section">
                     <img
-                        src="./images/jacques-cousteau.png"
+                        src="<%=require('./images/jacques-cousteau.png')%>"
                         alt="Avatar"
                         class="profile__image"
                     />
@@ -162,6 +161,5 @@
                     <button class="card__like-button" type="button"></button>
                 </div></li
         ></template>
-        <script src="./pages/index.js" type="module"></script>
     </body>
 </html>
