--- a/src/index.html
+++ b/src/index.html
@@ -148,6 +148,20 @@
             </div>
         </div>
 
+        //*delete card modal*// 
+        <div class="modal" id="delete-card-modal">
+            <div class="modal__container">
+                <button
+                    class="modal__close"
+                    id="delete-card-close-button"
+                    type="button"
+                ></button>
+                <h2 class="modal__heading">Are you sure?</h2>
+                <form class="modal__form">
+                    <button class="modal__button">Yes</button>
+                </form>
+            </div>
+
         <template id="card-template"
             ><li class="card">
                 <button
