--- a/src/index.html
+++ b/src/index.html
@@ -16,13 +16,13 @@
             </header>
             <main class="content">
                 <section class="profile page__section">
-                    
+                    <div class="profile__container">
                     <img
                         src="<%=require('./images/jacques-cousteau.png')%>"
                         alt="Avatar"
-                        class="profile__image"
-                    />
-                    
+                        class="profile__image"/>
+                    <button class="profile__image-edit" type="button"></button>
+                    </div>
                     <div class="profile__info">
                         <h1 class="profile__title">Jacques Cousteau</h1>
                         <button
