--- a/src/index.html
+++ b/src/index.html
@@ -17,11 +17,15 @@
             <main class="content">
                 <section class="profile page__section">
                     <div class="profile__container">
-                    <img
-                        src="<%=require('./images/jacques-cousteau.png')%>"
-                        alt="Avatar"
-                        class="profile__image"/>
-                    <button class="profile__image-edit" type="button"></button>
+                        <img
+                            src="<%=require('./images/jacques-cousteau.png')%>"
+                            alt="Avatar"
+                            class="profile__image"
+                        />
+                        <button
+                            class="profile__image-edit"
+                            type="button"
+                        ></button>
                     </div>
                     <div class="profile__info">
                         <h1 class="profile__title">Jacques Cousteau</h1>
@@ -43,12 +47,15 @@
             <p class="footer__copyright">&copy; 2024 Around the U.S.</p>
         </footer>
 
-        //*avatar-edit-modal*//
         <div class="modal" id="avatar-edit-modal">
             <div class="modal__container">
-                <button class="modal__close" id="avatar-modal-close-button" type="button"></button>
+                <button
+                    class="modal__close"
+                    id="avatar-modal-close-button"
+                    type="button"
+                ></button>
                 <h2 class="modal__heading">Change profile picture</h2>
-                <form class="modal__form" id="avatar-form">
+                <form class="modal__form" id="avatar-edit-form">
                     <label class="modal__label">
                         <input
                             class="modal__input"
@@ -58,14 +65,15 @@
                             placeholder="Image URL"
                             required
                         />
-                        <span class="modal__error" id="avatar-url-input-error"></span>
+                        <span
+                            class="modal__error"
+                            id="avatar-url-input-error"
+                        ></span>
                     </label>
                     <button class="modal__button" type="submit">Save</button>
                 </form>
             </div>
         </div>
-
-        //* profile edit modal*//
 
         <div class="modal" id="profile-edit-modal">
             <div class="modal__container">
@@ -75,7 +83,7 @@
                     type="button"
                 ></button>
                 <h2 class="modal__heading">Edit Profile</h2>
-                <form class="modal__form">
+                <form class="modal__form" id="profile-edit-form">
                     <label class="modal__label">
                         <input
                             class="modal__input"
@@ -115,7 +123,6 @@
             </div>
         </div>
 
-        //*add card modal*//
         <div class="modal" id="add-card-modal">
             <div class="modal__container">
                 <button
@@ -124,7 +131,7 @@
                     type="button"
                 ></button>
                 <h2 class="modal__heading">New Place</h2>
-                <form class="modal__form">
+                <form class="modal__form" id="add-card-form">
                     <label class="modal__label">
                         <input
                             class="modal__input modal__input_type_title"
@@ -160,7 +167,6 @@
             </div>
         </div>
 
-        //*card image modal*//
         <div class="modal" id="card-image-modal">
             <div class="modal__container modal__container_type_preview">
                 <img class="modal__image" src=" " alt=" " />
@@ -173,7 +179,6 @@
             </div>
         </div>
 
-        //*delete card modal*// 
         <div class="modal" id="delete-card-modal">
             <div class="modal__container">
                 <button
@@ -182,10 +187,11 @@
                     type="button"
                 ></button>
                 <h2 class="modal__heading">Are you sure?</h2>
-                <form class="modal__form">
+                <form class="modal__form" id="delete-card-form">
                     <button class="modal__button">Yes</button>
                 </form>
             </div>
+        </div>
 
         <template id="card-template"
             ><li class="card">
